<resources>
    <string name="app_name">SleepMonitor</string>
    <string name="version">Version 0.1</string>
    <string name="author">Author: <a href="https://github.com/dotponder">Arnold</a></string>
    <string name="email">Email: <a href="mailto:arnoldchow@outlook.com">arnoldchow@outlook.com</a></string>
    <string name="copyright">Copyright © 2022–2023 Arnold. All Right Reserved.</string>
    <string name="license">License: <a href="https://github.com/dotponder/SleepMonitor/blob/kotlin/LICENSE">MIT</a></string>
    <string name="source_code">Source Code: <a href="https://github.com/dotponder/SleepMonitor/">GitHub Repository</a></string>

    <string name="title_home">Home</string>

    <string name="title_records">Records</string>
    <string name="records_menu_day">Day</string>
    <string name="records_menu_week">Week</string>
    <string name="records_menu_month">Month</string>
    <string name="records_menu_year">Year</string>

    <string name="title_dashboard">Dashboard</string>
    <string-array name="dash">
        <item>Help</item>
        <item>Sensor Testing</item>
        <item>Storage Testing</item>
        <item>About this App</item>
        <item>Language Preference</item>
    </string-array>
    <string name="title_help">Help</string>

    <string name="title_sensor_testing">Sensor Testing</string>
    <string name="test_button">Start Test</string>
    <string name="test_button_stop">Stop Test</string>
    <string name="not_detected">Not Detected!</string>
    <string name="light_text">Light Value:</string>
    <string name="acc_x_text">Accelerator X:</string>
    <string name="acc_y_text">Accelerator Y:</string>
    <string name="acc_z_text">Accelerator Z:</string>
    <string name="volume_text">Voice Volume:</string>
    <string name="mean_hz_text">Voice Mean Frequency:</string>
    <string name="move_text">Moves count:</string>
    <string name="snore_text">Snore count:</string>
    <string name="current_time_text">Current Time:</string>
    <string name="running_time_text">Running Time</string>

    <string name="title_storage_testing">Storage Testing</string>

    <string name="title_about">About</string>

    <string name="title_language_preference">Language Preference</string>
</resources>