<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.records.RecordsFragment">

    <LinearLayout
        android:id="@+id/records_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/records_menu_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/records_menu_day"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/records_menu_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/records_menu_week"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/records_menu_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/records_menu_month"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/records_menu_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/records_menu_year"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/records_menu"
        app:layout_constraintVertical_bias="0.0">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/records_fragment_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout="@layout/fragment_day"/>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>